--- a/skin/overlay.css
+++ b/skin/overlay.css
@@ -4,7 +4,11 @@ background-color: #E6FF66;
 padding: 20px;
 }
 
-#eggon_selector label{
+#eggon_selector{
+ padding: 10px;
+}
+
+#eggon_dropdown_header{
  font-size: 10px;
  padding: 10px;
  border-bottom: solid 1px #ccc;
